[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Rosmaster_Lib"
version = "3.3.9"
description = "Python library for controlling Yahboom Rosmaster based robot driver board."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Yahboom Team" }
]
license = { file = "LICENSE" }
keywords = ["rosmaster", "robotics", "yahboom", "serial", "driver"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pyserial>=3.0"
]

[project.urls]
Homepage = "https://github.com/RobLibs/Rosmaster_Lib"
Source = "https://github.com/RobLibs/Rosmaster_Lib"
Issues = "https://github.com/RobLibs/Rosmaster_Lib/issues"
